# jasm

./: .gitignore  LICENSE  Makefile.am  NEWS  README  configure.ac  one_step_build.sh
prototypes/pipelines/: audio-read.sh  audio-write.sh  gst-find.sh  gst-man.sh  read.sh  video-read.sh  video-write.sh  write.sh
src/: Makefile.am  main.c
